Stream.toList 사용해보기